--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo_console",
   "version": "0.0.1",
   "description": "This is a console app to hand a todo list.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
